--- a/novel.bib
+++ b/novel.bib
@@ -1,21 +1,23 @@
 @article{AA09,
-  title={A novel regression approach: Least squares ratio},
   author={Akbilgic, Oguz and Akinci, Eylem Deniz},
+  title={A novel regression approach: Least squares ratio},
+  year={2009},
   journal={Communications in Statistics-Theory and Methods},
   volume={38},
   number={9},
   pages={1539--1545},
-  year={2009},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  doi={10.1080/03610920802455076}
 }
 
 @article{AHM51,
-  title={Optimal inventory policy},
   author={Arrow, Kenneth J and Harris, Theodore and Marschak, Jacob},
-  journal={Econometrica: Journal of the Econometric Society},
-  pages={250--272},
-  year={1951},
-  publisher={JSTOR}
+  title={Optimal inventory policy},
+ year={1951},
+ journal={Econometrica},
+ volume = {19},
+ pages={250--272},
+ doi={10.2307/1906813}
 }
 
 @article{BAA99,
@@ -26,7 +28,8 @@
   number={4},
   pages={632--642},
   year={1999},
-  publisher={INFORMS}
+  publisher={INFORMS},
+  doi={10.1287/opre.47.4.632}
 }
 
 @article{BK10,
@@ -37,13 +40,14 @@
   number={4},
   pages={613--629},
   year={2010},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  doi={10.3846/jbem.2010.30}
 }
 
 @techreport{BT06,
   title={A data-driven approach to newsvendor problems},
   author={Bertsimas, Dimitris and Thiele, Aur{\'e}lie},
-  journal={Working Paper, Massachusetts Institute of Technology},
+  institution={Sloan School of Management and Operations Research Center, Massachusetts Institute of Technology},
   year={2005}
 }
 
@@ -55,16 +59,25 @@
   number={2},
   pages={637--645},
   year={2012},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.ijpe.2011.04.017}
 }
 
+@book{Box76,
+  author={Box, George EP and Jenkins, Gwilym M and Reinsel, Gregory C},
+ year={2011},
+  title={Time Series Analysis: Forecasting and Control},
+  publisher={John Wiley \& Sons},
+  isbn={9780470272848}
+}
 @article{Br16,
   title = {Quantile forecasting in operational planning and inventory management--an initial empirical verification},
   author = {Bruzda, Joanna},
   journal = {Dynamic Econometric Models},
   volume = {16},
   pages = {5--20},
-  year = {2016}
+  year = {2016},
+  doi={10.12775/DEM.2016.001}
 }
 
 @article{CS19,
@@ -75,7 +88,8 @@
   number={6},
   pages={465--472},
   year={2019},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.orl.2019.08.008}
 }
 
 @article{Ca16,
@@ -85,7 +99,8 @@
   volume={68},
   pages={123--133},
   year={2016},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.cor.2015.11.002}
 }
 
 @article{CD14,
@@ -96,7 +111,8 @@
   number={3},
   pages={1247--1250},
   year={2014},
-  publisher={Copernicus GmbH}
+  publisher={Copernicus GmbH},
+  doi={10.5194/gmd-7-1247-2014}
 }
 
 @book{Ch12,
@@ -104,7 +120,8 @@
   author={Choi, Tsan-Ming},
   volume={176},
   year={2012},
-  publisher={Springer Science \& Business Media}
+  publisher={Springer Science \& Business Media},
+  isbn={9781461436003}
 }
 
 @article{DKA19,
@@ -114,25 +131,37 @@
   volume={1},
   number={1.0},
   pages={0--9},
-  year={2019}
+  year={2019},
+  doi={10.1038/s41592-019-0406-y}
 }
 
 @article{EGS95,
-  title={The risk-averse (and prudent) newsboy},
   author={Eeckhoudt, Louis and Gollier, Christian and Schlesinger, Harris},
-  journal={Management science},
+  year={1995},
+  title={The risk-averse (and prudent) newsboy},
+  journal={Management Science},
   volume={41},
   number={5},
   pages={786--794},
-  year={1995},
-  publisher={INFORMS}
+  publisher={INFORMS},
+  doi={10.1287/mnsc.41.5.786}
 }
 
 @book{GBC15,
   title={Deep learning},
   author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
   year={2016},
-  publisher={MIT press}
+  publisher={MIT press},
+  isbn={9780262337373}
+}
+
+@article{FG67,
+  author={Farrar, Donald E and Glauber, Robert R},
+  year={1967},
+  title={Multicollinearity in regression analysis: the problem revisited},
+  journal={Review of Economic and Statistics},
+  pages={92--107},
+  doi={10.2307/1937887}
 }
 
 @article{Guo11,  
@@ -143,7 +172,8 @@
   number={5},
   pages={917--926},
   year={2011},
-  publisher={IEEE}
+  publisher={IEEE},
+  doi={10.1109/TSMCA.2010.2093891}
 }
 
 @article{GM14,
@@ -154,19 +184,23 @@
   number={2},
   pages={523--536},
   year={2014},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.ejor.2014.05.028}
 }
 
 @book{HW63,
-  title={Analysis of inventory systems},
+  title={Analysis of Inventory Systems},
   author={Hadley, George and Whitin, Thomson M},
-  year={1963}
+  year={1963},
+  publisher={Prentice-Hall},
+  isbn={9780130329530}
 }
 
 @techreport{HN16,
   title={Fully polynomial time ($\Sigma$, $\Pi$)-approximation schemes for continuous nonlinear newsvendor and continuous stochastic dynamic programs},
   author={Halman, Nir and Nannicini, Giacomo},
-  year={2016}
+  year={2016},
+  institution={Hebrew University of Jerusalem}
 }
 
 @article{HOS12,
@@ -177,14 +211,16 @@
   number={2},
   pages={429--446},
   year={2012},
-  publisher={INFORMS}
+  publisher={INFORMS},
+  doi={10.1287/opre.1110.1031}
 }
 
 @techreport{HNS15,
   title={A data-driven, distribution-free, multivariate approach to the price-setting newsvendor problem},
   author={Harsha, Pavithra and Natarajan, Ramesh and Subramanian, Dharmashankar},
-  year={2015},
-  publisher={Working paper, IBM TJ Watson Research Center, Yorktown Heights, NY}
+  institution={IBM TJ Watson Research Center},
+  year={2015}
+  
 }
 
 @article{Hi08,
@@ -192,7 +228,8 @@
   author={Hinterhuber, Andreas},
   journal={Journal of business strategy},
   year={2008},
-  publisher={Emerald Group Publishing Limited}
+  publisher={Emerald Group Publishing Limited},
+  doi={10.1108/02756660810887079}
 }
 
 @article{Hu19,
@@ -203,35 +240,40 @@
   number={3},
   pages={904--915},
   year={2019},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.ejor.2019.04.043}
 }
 
 @book{Hy08,
-  title={Forecasting with exponential smoothing: the state space approach},
   author={Hyndman, Rob and Koehler, Anne B and Ord, J Keith and Snyder, Ralph D},
   year={2008},
-  publisher={Springer Science \& Business Media}
+  title={Forecasting with Exponential Smoothing: the State Space Approach},
+  publisher={Springer},
+  isbn={9783540719182}
 }
 
-@inbook{KC62,
-  title={Prices and optimal inventory policy},
+@incollection{KC62,
   author={Karlin, Samuel and Carr, Charles R},
-  journal={Studies in applied probability and management science},
-  volume={4},
-  pages={159--172},
   year={1962},
-  publisher={Stanford University Press Stanford, CA}
+  title={Prices and optimal inventory policy},
+  editor = {Arrow, K.J. and Scarf, H.},
+  booktitle={Studies in Applied Probability and Management Science},
+  pages={159--172},
+  publisher={Stanford University Press},
+  isbn={9780804700993}
 }
+
 
 @article{Ka94,
   title={A robust forecasting technique for inventory and leadtime management},
   author={Karmarkar, Uday S},
-  journal={Journal of operations management},
+  journal={Journal of Operations Management},
   volume={12},
   number={1},
   pages={45--54},
   year={1994},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/0272-6963(94)90005-1}
 }
 
 @article{Kh95,
@@ -242,7 +284,8 @@
   number={2},
   pages={458--466},
   year={1995},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/0377-2217(94)00053-F}
 }
 
 @article{Kh99,
@@ -253,7 +296,8 @@
   number={5},
   pages={537--553},
   year={1999},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/S0305-0483(99)00017-1}
 }
 
 @article{KWH15,
@@ -264,7 +308,8 @@
   number={1},
   pages={139--145},
   year={2015},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.aei.2014.12.002}
 }
 
 @article{KHM05,
@@ -275,33 +320,36 @@
   number={1},
   pages={41--55},
   year={2005},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  doi={10.1198/106186005X27563}
 }
 
 @book{Koe05,
   title={Quantile Regression (Econometric Society Monographs; No. 38)},
   author={Koenker},
   year={2005},
-  publisher={Cambridge university press}
+  publisher={Cambridge University Press},
+  isbn={9780511754098}
 }
 
 @article{RG78,
-  title={Regression quantiles},
   author={Koenker, Roger and Bassett Jr, Gilbert},
-  journal={Econometrica: journal of the Econometric Society},
-  pages={33--50},
   year={1978},
-  publisher={JSTOR}
+  title={Regression quantiles},
+  journal={Econometrica},
+  pages={33--50},
+  doi={10.2307/1913643}
 }
 
 @article{KH01,
   title={Quantile regression},
   author={Koenker, Roger and Hallock, Kevin F},
-  journal={Journal of economic perspectives},
+  journal={Journal of Economic Perspectives},
   volume={15},
   number={4},
   pages={143--156},
-  year={2001}
+  year={2001},
+  doi={10.1257/jep.15.4.143}
 }
 
 @article{KM99,
@@ -312,7 +360,8 @@
   number={448},
   pages={1296--1310},
   year={1999},
-  publisher={Taylor \& Francis Group}
+  publisher={Taylor \& Francis Group},
+  doi={10.1080/01621459.1999.10473882}
 }
 
 @article{KP96,
@@ -323,18 +372,19 @@
   number={1-2},
   pages={265--283},
   year={1996},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/0304-4076(96)84507-6}
 }
 
 @article{KT96,
   title={Inventory forecasting with a multiple criteria decision tool},
   author={Korpela, Jukka and Tuominen, Markku},
-  journal={International journal of production economics},
+  journal={International Journal of Production Economics},
   volume={45},
   number={1-3},
   pages={159--168},
   year={1996},
-  publisher={Citeseer}
+  doi={10.1016/0925-5273(95)00136-0}
 }
 
 @article{KTB20,
@@ -344,7 +394,8 @@
   volume={225},
   pages={107597},
   year={2020},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.ijpe.2019.107597}
 }
 
 @article{KK18,
@@ -355,6 +406,7 @@
   number = {1},
   pages = {64 - 68},
   year = {2018},
+  doi={10.1016/j.orl.2017.11.001}
 }
 
 @article{LL96,
@@ -363,25 +415,28 @@
   journal = {Operations Research},
   volume = {94},
   pages = {29--42},
-  year = {1996}
+  year = {1996},
+  doi={10.1016/0377-2217(95)00192-1}
 }
 
 @article{LBH15,
-  title = {Deep learning},
-  author = {Lecun, Y. and Bengio, Y. and Hinton, G.},
-  journal = {Nature},
-  volume = {521},
-  pages = {436--444},
-  year = {2015}
+  title={Deep learning},
+  author={Lecun, Y. and Bengio, Y. and Hinton, G.},
+  journal={Nature},
+  volume={521},
+  pages={436--444},
+  year={2015},
+  doi={10.1038/nature14539}
 }
 
 @article{LN89,
-  title = {On the limited memory {BFGS} method for large scale optimization},
-  author = {Liu, D.C and Nocedal, J.},
-  journal = {Mathematical Programming},
-  volume = {45},
+  title={On the limited memory {BFGS} method for large scale optimization},
+  author={Liu, D.C and Nocedal, J.},
+  journal={Mathematical Programming},
+  volume={45},
   pages={503-528},
-  year = {1989}
+  year={1989},
+  doi={10.1007/BF01589116}
 }
 
 @article{Ma19,
@@ -392,7 +447,8 @@
   number={9},
   pages={814},
   year={2019},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={Multidisciplinary Digital Publishing Institute},
+  doi={10.3390/math7090814}
 }
 
 @article{Mi59,
@@ -403,7 +459,8 @@
   number={1},
   pages={116--130},
   year={1959},
-  publisher={MIT Press}
+  publisher={MIT Press},
+  doi={10.2307/1883828}
 }
 
 @article{MG18,
@@ -414,7 +471,8 @@
   number={1},
   pages={109--119},
   year={2018},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.ejor.2018.05.015}
 }
 
 @article{MS00,
@@ -425,14 +483,16 @@
   number={5},
   pages={602--608},
   year={2000},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  doi={10.1057/palgrave.jors.2600938}
 }
 
 @book{MK51,
-  title={Methods of operations research},
+  title={Methods of Operations Research},
   author={Morse, Philip McCord and Kimball, George E and Gass, Saul I},
   year={2003},
-  publisher={Courier Corporation}
+  publisher={Courier Corporation},
+  isbn={9780486432342}
 }
 
 @article{OST20,
@@ -443,7 +503,8 @@
   number={4},
   pages={444--463},
   year={2020},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  doi={10.1080/24725854.2019.1632502}
 }
 
 @article{PSC15,
@@ -454,35 +515,39 @@
   number={7},
   pages={1269--1277},
   year={2015},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  doi={10.1080/00207721.2013.815828}
 }
 
 @article{PD99,
   title={Pricing and the newsvendor problem: A review with extensions},
   author={Petruzzi, Nicholas C and Dada, Maqbool},
-  journal={Operations research},
+  journal={Operations Research},
   volume={47},
   number={2},
   pages={183--194},
   year={1999},
-  publisher={INFORMS}
+  publisher={INFORMS},
+  doi={10.1287/opre.47.2.183}
 }
 
 @incollection{Po90,
-  title={Stochastic inventory theory},
-  author={Porteus, Evan L},
-  journal={Handbooks in operations research and management science},
-  volume={2},
-  pages={605--652},
-  year={1990},
-  publisher={Elsevier}
+  author = {Porteus, Evan L},
+  year = {1990},
+  title = {Stochastic inventory theory},
+  editor = {Heyman, D.P. and Sobel, M.J.},
+  booktitle = {Stochastic Models},
+  pages = {605 - 652},
+  publisher = {Elsevier},
+  doi={10.1016/S0927-0507(05)80176-8}
 }
 
 @book{Po02,
-  title={Foundations of stochastic inventory theory},
+  title={Foundations of Stochastic Inventory Theory},
   author={Porteus, Evan L},
   year={2002},
-  publisher={Stanford University Press}
+  publisher={Stanford University Press},
+  isbn={9780804743990}
 }
 
 @article{Ro02,
@@ -493,7 +558,8 @@
   number={6},
   pages={1007--1017},
   year={2002},
-  publisher={INFORMS}
+  publisher={INFORMS},
+  doi={10.1287/opre.50.6.1007.346}
 }
 
 @article{RV19,
@@ -504,13 +570,13 @@
   number={1},
   pages={90--108},
   year={2019},
-  publisher={INFORMS}
+  publisher={INFORMS},
+  doi={10.1287/opre.2018.1757}
 }
 
-@inbook{Sc58,
-  title={A min-max solution of an inventory problem},
+@book{Sc58,
   author={Scarf, Herbert},
-  journal={Studies in the mathematical theory of inventory and production},
+  title={Studies in the Mathematical Theory of Inventory and Production},
   year={1958},
   publisher={Stanford Univ. Press}
 }
@@ -522,80 +588,28 @@
   volume={61},
   pages={85--117},
   year={2015},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.neunet.2014.09.003}
 }
 
 @book{SPP98,
-  title={Inventory management and production planning and scheduling},
+  title={Inventory Management and Production Planning and Scheduling},
   author={Silver, Edward Allen and Pyke, David F and Peterson, Rein and others},
-  volume={3},
   year={1998},
-  publisher={Wiley New York}
+  publisher={Wiley New York},
+  isbn={9780471119470}
 }
 
-@article{TCK19,
-  title={Empirical safety stock estimation based on kernel and GARCH models},
-  author={Trapero, Juan R and Card{\'o}s, Manuel and Kourentzes, Nikolaos},
-  journal={Omega},
-  volume={84},
-  pages={199--211},
-  year={2019},
-  publisher={Elsevier}
-}
-
-@article{Wh54,
-  title={Erich Schneider's inventory control analysis},
-  author={Whitin, Thomas M},
-  journal={Journal of the Operations Research Society of America},
-  volume={2},
-  number={3},
-  pages={329--334},
-  year={1954},
-  publisher={INFORMS}
-}
-
-@article{WM05,
-  title={Advantages of the mean absolute error (MAE) over the root mean square error (RMSE) in assessing average model performance},
-  author={Willmott, Cort J and Matsuura, Kenji},
-  journal={Climate research},
-  volume={30},
+@article{SW81,
+  title={Minimization by random search techniques},
+  author={Solis, Francisco J and Wets, Roger J-B},
+  journal={Mathematics of Operations Research},
+  volume={6},
   number={1},
-  pages={79--82},
-  year={2005}
-}
-
-@article{ZZ18,
-  title={Visual interpretability for deep learning: a survey},
-  author={Zhang, Quan-shi and Zhu, Song-Chun},
-  journal={Frontiers of Information Technology \& Electronic Engineering},
-  volume={19},
-  number={1},
-  pages={27--39},
-  year={2018},
-  publisher={Springer}
-}
-
-@book{Zi00,
-  title={Foundations of inventory management},
-  author={Zipkin, Paul Herbert},
-  year={2000}
-}
-
-@article{FG67,
-  title={Multicollinearity in regression analysis: the problem revisited},
-  author={Farrar, Donald E and Glauber, Robert R},
-  journal={The Review of Economic and Statistics},
-  pages={92--107},
-  year={1967},
-  publisher={JSTOR}
-}
-
-@book{Box76,
-  title={Time series analysis: forecasting and control},
-  author={Box, George EP and Jenkins, Gwilym M and Reinsel, Gregory C},
-  volume={734},
-  year={2011},
-  publisher={John Wiley \& Sons}
+  pages={19--30},
+  year={1981},
+  publisher={INFORMS},
+  doi={10.1287/moor.6.1.19}
 }
 
 @article{SBBKN16,
@@ -606,16 +620,60 @@
   number={1},
   pages={1--26},
   year={2016},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.ejor.2015.11.010}
 }
 
-@article{SW81,
-  title={Minimization by random search techniques},
-  author={Solis, Francisco J and Wets, Roger J-B},
-  journal={Mathematics of operations research},
-  volume={6},
+@article{TCK19,
+  title={Empirical safety stock estimation based on kernel and GARCH models},
+  author={Trapero, Juan R and Card{\'o}s, Manuel and Kourentzes, Nikolaos},
+  journal={Omega},
+  volume={84},
+  pages={199--211},
+  year={2019},
+  publisher={Elsevier},
+  doi={10.1016/j.omega.2018.05.004}
+}
+
+@article{Wh54,
+  title={Erich Schneider's inventory control analysis},
+  author={Whitin, Thomas M},
+  journal={Journal of the Operations Research Society of America},
+  volume={2},
+  number={3},
+  pages={329--334},
+  year={1954},
+  publisher={INFORMS},
+  doi={10.1287/opre.2.3.329}
+}
+
+@article{WM05,
+  title={Advantages of the mean absolute error (MAE) over the root mean square error (RMSE) in assessing average model performance},
+  author={Willmott, Cort J and Matsuura, Kenji},
+  journal={Climate research},
+  volume={30},
   number={1},
-  pages={19--30},
-  year={1981},
-  publisher={INFORMS}
+  pages={79--82},
+  year={2005},
+  url={https://www.jstor.org/stable/24869236}
+}
+
+@article{ZZ18,
+  title={Visual interpretability for deep learning: a survey},
+  author={Zhang, Quan-shi and Zhu, Song-Chun},
+  journal={Frontiers of Information Technology \& Electronic Engineering},
+  volume={19},
+  number={1},
+  pages={27--39},
+  year={2018},
+  publisher={Springer},
+  doi={10.1631/FITEE.1700808}
+}
+
+@book{Zi00,
+  title={Foundations of Inventory Management},
+  author={Zipkin, Paul Herbert},
+  year={2000},
+  publisher={McGraw-Hill},
+  isbn={9780071183154}
 }
